Add reference to server in unit test project

--- a/TaxCalculatorAPITests/TaxCalculatorAPITests.csproj
+++ b/TaxCalculatorAPITests/TaxCalculatorAPITests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -21,6 +21,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TaxCalculator.Server\TaxCalculator.Server.csproj" />
   </ItemGroup>
 
   <ItemGroup>
