--- a/TaxCalculator.Server/TaxCalculator.Server.csproj
+++ b/TaxCalculator.Server/TaxCalculator.Server.csproj
@@ -9,6 +9,10 @@
     <SpaProxyServerUrl>https://localhost:57828</SpaProxyServerUrl>
   </PropertyGroup>
 
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	</PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>9.0.0</Version>
